@startuml Class Diagram
title Product Model
class Product {
    -name:string
    -brand:string
    -price:float
    -quantity:int
    --
    +getName():string
    +getBrand():string
    +getPrice():float
    +getQuantity():int
    --
    +setName(value:string)
    +setBrand(value:string)
    +setPrice(value:float)
    +setQuantity(value:int)
    --
    +Product(name, brand, price, quantity)
    --
    +getTotalPrice()
}
class Object{

    toString():string
}

Product -up-|> Object :"<<extends>>"

class ProductHelper {

    +creatItemFromText()
    +getBalance()
}

ProductHelper -left-|> Object :"<<extends>>"

hide empty members
@enduml